# coder-factory

./: .gitignore  Dockerfile  Dockerfile.web  README.md  cf  coder-factory  coder-factory.bat  docker-compose.web.yml  docker-compose.yml  features.json  progress.md  pyproject.toml  requirements.txt  run_web.py  web-requirements.txt
coder_factory/: __init__.py  cli.py
coder_factory/core/: __init__.py  factory.py  state.py
coder_factory/engines/: __init__.py  architecture_designer.py  claude_client.py  confirmation_flow.py  delivery_pipeline.py  deployment_engine.py  interaction_manager.py  requirement_parser.py  tech_stack_kb.py
coder_factory/models/: __init__.py  project_spec.py  requirement.py
coder_factory/utils/: __init__.py
coder_factory/web/: __init__.py  config.py  main.py
coder_factory/web/routers/: architecture.py  codegen.py  delivery.py  deployment.py  dialog.py  requirements.py  tasks.py  websocket.py
coder_factory/web/services/: __init__.py  session_manager.py  storage.py
coder_factory/web/static/: index.html
coder_factory/web/static/css/: styles.css
coder_factory/web/static/js/: api.js  app.js  ws.js
tests/: test_factory.py
